# json2rdf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.github/workflows/: python-publish.yml
json2rdf/: pyproject.toml
json2rdf/src/json2rdf/: __init__.py  json2rdf.py
json2rdf/test/: test.py
src/json2rdf/: __init__.py  cli.py  json2rdf.py
test/: test.py
test/test/: .gitignore  test.ttl
